--- a/StudentCtrServer/pom.xml
+++ b/StudentCtrServer/pom.xml
@@ -1,18 +1,23 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>ptit</groupId>
-  <artifactId>StudentCtrServer</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
-  <dependencies>
+    <modelVersion>4.0.0</modelVersion>
+    <groupId>ptit</groupId>
+    <artifactId>StudentCtrServer</artifactId>
+    <version>0.0.1-SNAPSHOT</version>
+    <dependencies>
         <dependency>
             <groupId>ptit</groupId>
             <artifactId>StudentCtr</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
-    <dependency>
-      <groupId>mysql</groupId>
-      <artifactId>mysql-connector-java</artifactId>
-      <version>5.1.38</version>
-    </dependency>
-  </dependencies>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.38</version>
+        </dependency>
+        <dependency>
+            <groupId>net.sourceforge.jtds</groupId>
+            <artifactId>jtds</artifactId>
+            <version>1.3.1</version>
+        </dependency>
+    </dependencies>
 </project>
